  - Fundamentalists:
   - Sharia Law now gives +0.10 Outlook support instead of +0.05
   - Foreign Fighters now gives you +300 weekly manpower rather than a repeatable decision

 Graphics:
  - Fixed the USNA flag being incorrectly compressed causing it to not properly grab the formable flag

 Map:
  - Redrew the map for the Baltic countries, Kaliningrad, Belarus, Ukraine, Moldova, Poland, Czechia, Slovakia, Morocco, Lebanon, Syria, Iraq, Kuwait, Iran, Hungary, Austria, Switzerland, Germany, Israel, Palestine, Jordan, Qatar, Bahrain, UAE, Oman, Yemen and Saudi Arabia

 User Interface (QoL):
  - Added toggles for Nuclear Power Plant and Fossil Fuel Power Plant for more control over your energy

v1.11.1b

 AI:
  - AI should be more likely ratify NATO applicants if they are influenced by a NATO member, has high opinion and if any of their neighbors are emerging, nationalist or salafist
  - USA should be more apt to declare operation enduring freedom if there is less than 25% threat or if they have not done so before Jan 2005
  - SER will now seek to rebuild Yugoslavia in peace deals at half cost after completion of the appropriate focus

 Balance:
  - Reduced the passive counter intelligence gain from the "Counter-Intelligence" agency upgrade
  - Increased the gained acreage for Brazil for the Amazon Rainforest system
  - Added some triggers to the Brazilian content that you can't take decisions if you do not have the acreage to do it.
  - Reparations amount paid will now be scaled based off of the victim country GDP instead of the attacker

 Bugfix:
  - Fixed the Internal Faction event "Communist Cadres & The Military Fight Over Ideology" having incorrect options and opinion boosts
  - Fixed the "X Proposes Pre-emptive strike against Iran" event triggering twice for someone
  - Fixed Ukraine being 20 years ahead in Anti Air weaponry for No Step Back users
  - Fixed the Space Programs not showing up properly due to bad DLC checks