@@ -242,7 +242,7 @@
  tungsten_export_multiplier_modifier: "£resource_export_multiplier_modifier_texticon §YTechnology Metals Exports Revenue§! Multiplier"
  chromium_export_multiplier_modifier: "£resource_export_multiplier_modifier_texticon §YPrecious Metals Exports Revenue§! Multiplier"
  rubber_export_multiplier_modifier: "£resource_export_multiplier_modifier_texticon §YRubber Exports Revenue§! Multiplier"
- econ_cycle_upg_cost_multiplier_modifier: "£econ_cycle_upg_cost_multiplier_modifier_texticon §YEconomic Upgrade Cycle Cost§! Multiplier"
+ econ_cycle_upg_cost_multiplier_modifier: "£econ_cycle_upg_cost_multiplier_modifier_texticon §YEconomic Cycle Upgrade Treasury Cost§! Multiplier"
  cyber_cost_multiplier_modifier: "£cyber_cost_multiplier_modifier_texticon §YCyber Security infrastructure Cost§! Multiplier"
  tax_rate_change_multiplier_modifier: "£tax_rate_change_multiplier_modifier_texticon §YTax Rate Change Cost§! Multiplier"
  return_on_investment_modifier: "£return_on_investment_modifier_texticon §YReturn on Investment§!"
@@ -2080,25 +2080,25 @@
  FEMALE_DIVISIONAL_COMMANDER_CHANCE: "£officer_texticon  Female Divisional Commander Chance"
 #politics_l_english
  POLITICS_IDEOLOGY_POPULARITY_CHANGE: "£boost_popularity_texticon  Change in popularity of $IDEOLOGY$: $VALUE|+2%$"
- corruption_cost_factor: "£corruption_cost_factor_texticon Cost to change Corruption"
- economic_cycles_cost_factor: "£economic_cycles_cost_factor_texticon Cost to change Economic Cycles"
- internal_factions_cost_factor: "£internal_factions_cost_factor_texticon Cost to change Internal Factions"
- bureaucracy_cost_factor: "£bureaucracy_cost_factor_texticon Cost to change Bureaucracy Spending"
- crime_fighting_cost_factor: "£crime_fighting_cost_factor_texticon Cost to change Internal Security Spending"
- education_budget_cost_factor: "£education_budget_cost_factor_texticon Cost to change Education Spending"
- health_budget_cost_factor: "£health_budget_cost_factor_texticon Cost to change Health Spending"
- social_budget_cost_factor: "£social_budget_cost_factor_texticon Cost to change Social Spending"
- Military_Spending_cost_factor: "£Military_Spending_cost_factor_texticon Cost to change Military Spending"
- Conscription_Law_cost_factor: "£Conscription_Law_cost_factor_texticon Cost to change Conscription Laws"
- Military_Status_Women_cost_factor: "£Military_Status_Women_cost_factor_texticon Cost to change Women Conscription Laws"
- Foreign_Intervention_Law_cost_factor: "£Foreign_Intervention_Law_cost_factor_texticon Cost to change Foreign Intervention Laws"
- Officer_Training_Law_cost_factor: "£Officer_Training_Law_cost_factor_texticon Cost to change Officer Training Laws"
- Infantry_Weapon_Company_cost_factor: "£Infantry_Weapon_Company_cost_factor_texticon Cost to change Infantry Weapon Company"
- Vehicle_Company_cost_factor: "£Vehicle_Company_cost_factor_texticon Cost to change Vehicle Company"
- Aircraft_Company_cost_factor: "£Aircraft_Company_cost_factor_texticon Cost to change Aircraft Company"
- Helicopter_Company_cost_factor: "£Helicopter_Company_cost_factor_texticon Cost to change Helicopter Company"
- Ship_Company_cost_factor: "£Ship_Company_cost_factor_texticon Cost to change Ship Company"
- Submarine_Company_cost_factor: "£Submarine_Company_cost_factor_texticon Cost to change Submarine Company"
+ corruption_cost_factor: "£corruption_cost_factor_texticon Political Power Cost to change Corruption"
+ economic_cycles_cost_factor: "£economic_cycles_cost_factor_texticon Political Power Cost to change Economic Cycles"
+ internal_factions_cost_factor: "£internal_factions_cost_factor_texticon Political Power Cost to change Internal Factions"
+ bureaucracy_cost_factor: "£bureaucracy_cost_factor_texticon Political Power Cost to change Bureaucracy Spending"
+ crime_fighting_cost_factor: "£crime_fighting_cost_factor_texticon Political Power Cost to change Internal Security Spending"
+ education_budget_cost_factor: "£education_budget_cost_factor_texticon Political Power Cost to change Education Spending"
+ health_budget_cost_factor: "£health_budget_cost_factor_texticon Political Power Cost to change Health Spending"
+ social_budget_cost_factor: "£social_budget_cost_factor_texticon Political Power Cost to change Social Spending"
+ Military_Spending_cost_factor: "£Military_Spending_cost_factor_texticon Political Power Cost to change Military Spending"
+ Conscription_Law_cost_factor: "£Conscription_Law_cost_factor_texticon Political Power Cost to change Conscription Laws"
+ Military_Status_Women_cost_factor: "£Military_Status_Women_cost_factor_texticon Political Power Cost to change Women Conscription Laws"
+ Foreign_Intervention_Law_cost_factor: "£Foreign_Intervention_Law_cost_factor_texticon Political Power Cost to change Foreign Intervention Laws"
+ Officer_Training_Law_cost_factor: "£Officer_Training_Law_cost_factor_texticon Political Power Cost to change Officer Training Laws"
+ Infantry_Weapon_Company_cost_factor: "£Infantry_Weapon_Company_cost_factor_texticon Political Power Cost to change Infantry Weapon Company"
+ Vehicle_Company_cost_factor: "£Vehicle_Company_cost_factor_texticon Political Power Cost to change Vehicle Company"
+ Aircraft_Company_cost_factor: "£Aircraft_Company_cost_factor_texticon Political Power Cost to change Aircraft Company"
+ Helicopter_Company_cost_factor: "£Helicopter_Company_cost_factor_texticon Political Power Cost to change Helicopter Company"
+ Ship_Company_cost_factor: "£Ship_Company_cost_factor_texticon Political Power Cost to change Ship Company"
+ Submarine_Company_cost_factor: "£Submarine_Company_cost_factor_texticon Political Power Cost to change Submarine Company"
  nationalist_acceptance: "£nationalist_acceptance_texticon Acceptance of Nationalist Diplomacy"
 
 #research_l_english
