@@ -77,6 +77,11 @@ v1.11.2
  Graphics:
   - Fixed the USNA flag being incorrectly compressed causing it to not properly grab the formable flag
 
+ Localization:
+  - Added more translations and fixed a number of localization strings
+  - Added "Political Power" to the Cost of X tooltips to be more clear
+  - Added "Treasury Cost" to the Economic Cycle Upgrade cost tooltip
+
  Map:
   - Redrew the map for the Baltic countries, Kaliningrad, Belarus, Ukraine, Moldova, Poland, Czechia, Slovakia, Morocco, Lebanon, Syria, Iraq, Kuwait, Iran, Hungary, Austria, Switzerland, Germany, Israel, Palestine, Jordan, Qatar, Bahrain, UAE, Oman, Yemen and Saudi Arabia
 
